Bug Fixes - Graph doesn’t pan when you have networks with no links - Mismatch of element position wrt to initial and when dragged - Drag issue for config graph: Added scrollbar - Grid refresh view issue on collapse

--- a/webroot/css/contrail.graph.css
+++ b/webroot/css/contrail.graph.css
@@ -128,6 +128,8 @@
     min-height: 100px;
     position:relative;
     right:40px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 .graph.holygrail .col3 {
     float: left;
